Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -525,6 +525,33 @@
     ]
   },
   {
+    "title": "Thuốc đích, miễn dịch có thay hóa trị ung thư vú được không?",
+    "content": "Bài viết thảo luận về việc liệu liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú hay không. Theo bác sĩ, thuốc đích và liệu pháp miễn dịch là những phương pháp mới có thể giúp giảm tác dụng phụ so với hóa trị, nhưng chúng không thể hoàn toàn thay thế hóa trị. Việc điều trị sẽ phụ thuộc vào đặc điểm sinh học của từng bệnh nhân và tình trạng bệnh. Tùy thuộc vào từng trường hợp cụ thể, bác sĩ sẽ quyết định phương pháp phù hợp để tối ưu hiệu quả điều trị.",
+    "link": "https://vnexpress.net/thuoc-dich-mien-dich-co-thay-hoa-tri-ung-thu-vu-duoc-khong-4864508.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú không?",
+    "answers": [
+      {
+        "text": "Không hoàn toàn thay thế",
+        "correct": true
+      },
+      {
+        "text": "Có thể thay thế hoàn toàn",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dùng cho giai đoạn cuối",
+        "correct": false
+      },
+      {
+        "text": "Không áp dụng cho mọi bệnh nhân",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Sinh con đầu lòng ở tuổi 54",
     "content": "Một người phụ nữ 54 tuổi, mắc bệnh lạc nội mạc và có tử cung xơ hóa hoàn toàn, đã mang thai thành công nhờ thụ tinh ống nghiệm (IVF). Tuy nhiên, thai kỳ của bà gặp nhiều biến chứng, dẫn đến ca sinh mổ khó khăn. Các bác sĩ đã phải can thiệp phẫu thuật sâu để đưa em bé ra, và cuối cùng, một bé trai nặng 2,1 kg đã chào đời khỏe mạnh. Hiện tại, sức khỏe của cả mẹ và con đều ổn định, được xem là một kỳ tích trong y học.",
     "link": "https://vnexpress.net/sinh-con-dau-long-o-tuoi-54-4864546.html",
@@ -552,28 +579,28 @@
     ]
   },
   {
-    "title": "Thuốc đích, miễn dịch có thay hóa trị ung thư vú được không?",
-    "content": "Bài viết thảo luận về việc liệu liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú hay không. Theo bác sĩ, thuốc đích và liệu pháp miễn dịch là những phương pháp mới có thể giúp giảm tác dụng phụ so với hóa trị, nhưng chúng không thể hoàn toàn thay thế hóa trị. Việc điều trị sẽ phụ thuộc vào đặc điểm sinh học của từng bệnh nhân và tình trạng bệnh. Tùy thuộc vào từng trường hợp cụ thể, bác sĩ sẽ quyết định phương pháp phù hợp để tối ưu hiệu quả điều trị.",
-    "link": "https://vnexpress.net/thuoc-dich-mien-dich-co-thay-hoa-tri-ung-thu-vu-duoc-khong-4864508.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
+    "title": "Lính Ukraine kể lại cuộc rút quân hỗn loạn khỏi \"chảo lửa\" Kursk",
+    "content": "Binh sĩ Ukraine, Artem Kariakin, đã mô tả cuộc rút quân hỗn loạn của họ khỏi Sudzha, một thị trấn ở tỉnh Kursk của Nga, sau khi bị tấn công bởi các UAV của Nga. Họ đã gặp khó khăn trong việc liên lạc và rút lui do lệnh rút muộn, và hệ thống vệ tinh Starlink không hoạt động trong khu vực này. Mặc dù cuộc rút lui gặp nhiều khó khăn, Artem cho rằng chiến dịch Kursk vẫn thành công trong việc buộc Nga phải điều chuyển lực lượng khỏi miền Đông Ukraine.",
+    "link": "https://dantri.com.vn/the-gioi/linh-ukraine-ke-lai-cuoc-rut-quan-hon-loan-khoi-chao-lua-kursk-20250322154911411.htm",
+    "cat": "the-gioi",
+    "positivity": 4,
     "importance": 8,
-    "question": "Liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú không?",
+    "question": "Cuộc rút quân của lính Ukraine khỏi Kursk diễn ra như thế nào?",
     "answers": [
       {
-        "text": "Không hoàn toàn thay thế",
+        "text": "Hỗn loạn và gặp nhiều khó khăn",
         "correct": true
       },
       {
-        "text": "Có thể thay thế hoàn toàn",
+        "text": "Trật tự và an toàn",
         "correct": false
       },
       {
-        "text": "Chỉ dùng cho giai đoạn cuối",
+        "text": "Thành công và không vấn đề gì",
         "correct": false
       },
       {
-        "text": "Không áp dụng cho mọi bệnh nhân",
+        "text": "Chỉ huy được thực hiện tốt",
         "correct": false
       }
     ]
@@ -2519,6 +2546,33 @@
     ]
   },
   {
+    "title": "Viêm xoang có di truyền không?",
+    "content": "Viêm xoang không phải là bệnh di truyền, nhưng một số yếu tố di truyền có thể làm tăng nguy cơ mắc bệnh. Các biến thể trong gene như TAS2R38 và ALOX15 có thể ảnh hưởng đến khả năng bảo vệ của xoang mũi và dẫn đến viêm xoang. Mặc dù không di truyền, nhưng môi trường sống và thói quen sinh hoạt của gia đình cũng có thể tạo điều kiện cho bệnh phát triển. Bệnh viêm xoang có thể được điều trị bằng nhiều phương pháp khác nhau, bao gồm thuốc và can thiệp y tế nếu cần.",
+    "link": "https://vnexpress.net/viem-xoang-co-di-truyen-khong-4864247.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Viêm xoang có di truyền không?",
+    "answers": [
+      {
+        "text": "Không, viêm xoang không di truyền nhưng có thể có yếu tố di truyền liên quan.",
+        "correct": true
+      },
+      {
+        "text": "Có, viêm xoang là bệnh di truyền từ cha mẹ sang con.",
+        "correct": false
+      },
+      {
+        "text": "Có thể di truyền trong một số trường hợp hiếm.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở những người sống trong cùng một môi trường.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Dấu hiệu liệt dây thần kinh số 7",
     "content": "Liệt dây thần kinh số 7, hay còn gọi là liệt mặt, có thể biểu hiện qua các triệu chứng như tê nhẹ hoặc cứng một bên mặt, khó khăn khi cười, và miệng kéo lệch khi nói hoặc ăn. Dây thần kinh số 7 điều khiển các cử động cơ mặt và liên quan đến cảm giác vị giác, tiết nước bọt và nước mắt. Nếu phát hiện sớm, điều trị trong vòng 72 giờ có thể giúp phục hồi chức năng hoàn toàn và giảm nguy cơ biến chứng. Các nguyên nhân gây liệt bao gồm nhiễm lạnh, nhiễm virus, và các bệnh lý viêm nhiễm.",
     "link": "https://vnexpress.net/dau-hieu-liet-day-than-kinh-so-7-4864394.html",
@@ -2545,33 +2599,6 @@
       },
       {
         "text": "Đau bụng dưới",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Viêm xoang có di truyền không?",
-    "content": "Viêm xoang không phải là bệnh di truyền, nhưng một số yếu tố di truyền có thể làm tăng nguy cơ mắc bệnh. Các biến thể trong gene như TAS2R38 và ALOX15 có thể ảnh hưởng đến khả năng bảo vệ của xoang mũi và dẫn đến viêm xoang. Mặc dù không di truyền, nhưng môi trường sống và thói quen sinh hoạt của gia đình cũng có thể tạo điều kiện cho bệnh phát triển. Bệnh viêm xoang có thể được điều trị bằng nhiều phương pháp khác nhau, bao gồm thuốc và can thiệp y tế nếu cần.",
-    "link": "https://vnexpress.net/viem-xoang-co-di-truyen-khong-4864247.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Viêm xoang có di truyền không?",
-    "answers": [
-      {
-        "text": "Không, viêm xoang không di truyền nhưng có thể có yếu tố di truyền liên quan.",
-        "correct": true
-      },
-      {
-        "text": "Có, viêm xoang là bệnh di truyền từ cha mẹ sang con.",
-        "correct": false
-      },
-      {
-        "text": "Có thể di truyền trong một số trường hợp hiếm.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở những người sống trong cùng một môi trường.",
         "correct": false
       }
     ]
@@ -3238,33 +3265,6 @@
     ]
   },
   {
-    "title": "Cơn ác mộng khi uống những liều thuốc trầm cảm đầu tiên",
-    "content": "Sau khi uống thuốc chống trầm cảm lần đầu, Nam, 34 tuổi, trải qua cảm giác khó thở và lo lắng cực độ, nghi ngờ về sự an toàn của thuốc. Tình trạng này không phải là cá biệt, nhiều bệnh nhân khác cũng gặp phải triệu chứng tương tự, dẫn đến việc tự ý ngừng thuốc. Theo các chuyên gia, hội chứng serotonin có thể xảy ra ở những người nhạy cảm, và việc không kiên nhẫn trong điều trị có thể làm tình trạng bệnh trở nên nghiêm trọng hơn. Để điều trị hiệu quả, bệnh nhân cần tuân thủ hướng dẫn của bác sĩ và hiểu rõ các triệu chứng có thể xảy ra.",
-    "link": "https://vnexpress.net/con-ac-mong-khi-uong-nhung-lieu-thuoc-tram-cam-dau-tien-4863109.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao nhiều bệnh nhân trầm cảm lại ngừng uống thuốc sau liều đầu tiên?",
-    "answers": [
-      {
-        "text": "Vì họ gặp phải tác dụng phụ đáng sợ.",
-        "correct": true
-      },
-      {
-        "text": "Vì thuốc không có tác dụng ngay lập tức.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ không muốn điều trị nữa.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ không có tiền để tiếp tục dùng thuốc.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Malaysia bổ sung 3 cầu thủ nhập tịch",
     "content": "Malaysia đã bổ sung ba cầu thủ nhập tịch vào đội tuyển bóng đá quốc gia nhằm chuẩn bị cho vòng loại cuối Asian Cup 2027. Ba cầu thủ này bao gồm tiền vệ Hector Hevel, hậu vệ Gabriel Palmero và thủ môn Christian Abad Amat, tất cả đều có nguồn gốc từ Tây Ban Nha. HLV Peter Cklamovski cho biết sự bổ sung này sẽ nâng cao sức cạnh tranh trong đội hình và góp phần cải thiện phong độ chung của đội tuyển.",
     "link": "https://vnexpress.net/malaysia-bo-sung-3-cau-thu-nhap-tich-4864311.html",
@@ -3314,6 +3314,33 @@
       },
       {
         "text": "Tổ chức hội thảo về sức khỏe",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cơn ác mộng khi uống những liều thuốc trầm cảm đầu tiên",
+    "content": "Sau khi uống thuốc chống trầm cảm lần đầu, Nam, 34 tuổi, trải qua cảm giác khó thở và lo lắng cực độ, nghi ngờ về sự an toàn của thuốc. Tình trạng này không phải là cá biệt, nhiều bệnh nhân khác cũng gặp phải triệu chứng tương tự, dẫn đến việc tự ý ngừng thuốc. Theo các chuyên gia, hội chứng serotonin có thể xảy ra ở những người nhạy cảm, và việc không kiên nhẫn trong điều trị có thể làm tình trạng bệnh trở nên nghiêm trọng hơn. Để điều trị hiệu quả, bệnh nhân cần tuân thủ hướng dẫn của bác sĩ và hiểu rõ các triệu chứng có thể xảy ra.",
+    "link": "https://vnexpress.net/con-ac-mong-khi-uong-nhung-lieu-thuoc-tram-cam-dau-tien-4863109.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao nhiều bệnh nhân trầm cảm lại ngừng uống thuốc sau liều đầu tiên?",
+    "answers": [
+      {
+        "text": "Vì họ gặp phải tác dụng phụ đáng sợ.",
+        "correct": true
+      },
+      {
+        "text": "Vì thuốc không có tác dụng ngay lập tức.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không muốn điều trị nữa.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không có tiền để tiếp tục dùng thuốc.",
         "correct": false
       }
     ]
@@ -3845,28 +3872,28 @@
     ]
   },
   {
-    "title": "Nguyên nhân chất lượng phôi kém khi thụ tinh ống nghiệm",
-    "content": "Chất lượng phôi trong thụ tinh ống nghiệm bị ảnh hưởng bởi nhiều yếu tố như chất lượng trứng và tinh trùng, môi trường nuôi cấy và công nghệ. Phôi kém chất lượng thường có hình thái bất thường và tốc độ phát triển chậm, dẫn đến tỷ lệ làm tổ thấp. Đặc biệt, độ tuổi của người phụ nữ có thể gây suy giảm chất lượng trứng, cùng với các yếu tố môi trường và lối sống cũng tác động đến chất lượng phôi.",
-    "link": "https://vnexpress.net/nguyen-nhan-chat-luong-phoi-kem-khi-thu-tinh-ong-nghiem-4864319.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
+    "title": "Ngày mai diễn ra Ngày hội sáng tạo VF 3",
+    "content": "Ngày 22/3, VinFast sẽ tổ chức sự kiện \"Ngày hội sáng tạo VF 3\" tại ba địa điểm: Hà Nội, Quảng Nam và TP HCM. Sự kiện này nhằm trao giải cho các thiết kế xe sáng tạo, với gần 500 bài dự thi và tổng giá trị giải thưởng lên đến 650 triệu đồng. Ban giám khảo bao gồm nhiều chuyên gia và nghệ sĩ, sẽ lựa chọn các mẫu xe đại diện cho từng miền và trao các giải thưởng khác nhau cho những thiết kế xuất sắc.",
+    "link": "https://vnexpress.net/ngay-mai-dien-ra-ngay-hoi-sang-tao-vf-3-4864359.html",
+    "cat": "kinh-doanh",
+    "positivity": 9,
     "importance": 8,
-    "question": "Nguyên nhân nào gây chất lượng phôi kém trong thụ tinh ống nghiệm?",
+    "question": "Ngày hội sáng tạo VF 3 sẽ diễn ra vào ngày nào và ở đâu?",
     "answers": [
       {
-        "text": "Độ tuổi phụ nữ tăng cao",
+        "text": "Ngày 22/3 tại Hà Nội, Quảng Nam và TP HCM",
         "correct": true
       },
       {
-        "text": "Chế độ dinh dưỡng tốt",
+        "text": "Ngày 21/3 tại Hà Nội và TP HCM",
         "correct": false
       },
       {
-        "text": "Môi trường sống sạch sẽ",
+        "text": "Ngày 22/3 tại Hà Nội và Đà Nẵng",
         "correct": false
       },
       {
-        "text": "Số lượng tinh trùng nhiều",
+        "text": "Ngày 23/3 tại TP HCM và Quảng Nam",
         "correct": false
       }
     ]
@@ -3903,28 +3930,28 @@
     ]
   },
   {
-    "title": "Ngày mai diễn ra Ngày hội sáng tạo VF 3",
-    "content": "Ngày 22/3, VinFast sẽ tổ chức sự kiện \"Ngày hội sáng tạo VF 3\" tại ba địa điểm: Hà Nội, Quảng Nam và TP HCM. Sự kiện này nhằm trao giải cho các thiết kế xe sáng tạo, với gần 500 bài dự thi và tổng giá trị giải thưởng lên đến 650 triệu đồng. Ban giám khảo bao gồm nhiều chuyên gia và nghệ sĩ, sẽ lựa chọn các mẫu xe đại diện cho từng miền và trao các giải thưởng khác nhau cho những thiết kế xuất sắc.",
-    "link": "https://vnexpress.net/ngay-mai-dien-ra-ngay-hoi-sang-tao-vf-3-4864359.html",
-    "cat": "kinh-doanh",
-    "positivity": 9,
+    "title": "Nguyên nhân chất lượng phôi kém khi thụ tinh ống nghiệm",
+    "content": "Chất lượng phôi trong thụ tinh ống nghiệm bị ảnh hưởng bởi nhiều yếu tố như chất lượng trứng và tinh trùng, môi trường nuôi cấy và công nghệ. Phôi kém chất lượng thường có hình thái bất thường và tốc độ phát triển chậm, dẫn đến tỷ lệ làm tổ thấp. Đặc biệt, độ tuổi của người phụ nữ có thể gây suy giảm chất lượng trứng, cùng với các yếu tố môi trường và lối sống cũng tác động đến chất lượng phôi.",
+    "link": "https://vnexpress.net/nguyen-nhan-chat-luong-phoi-kem-khi-thu-tinh-ong-nghiem-4864319.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
     "importance": 8,
-    "question": "Ngày hội sáng tạo VF 3 sẽ diễn ra vào ngày nào và ở đâu?",
+    "question": "Nguyên nhân nào gây chất lượng phôi kém trong thụ tinh ống nghiệm?",
     "answers": [
       {
-        "text": "Ngày 22/3 tại Hà Nội, Quảng Nam và TP HCM",
+        "text": "Độ tuổi phụ nữ tăng cao",
         "correct": true
       },
       {
-        "text": "Ngày 21/3 tại Hà Nội và TP HCM",
+        "text": "Chế độ dinh dưỡng tốt",
         "correct": false
       },
       {
-        "text": "Ngày 22/3 tại Hà Nội và Đà Nẵng",
+        "text": "Môi trường sống sạch sẽ",
         "correct": false
       },
       {
-        "text": "Ngày 23/3 tại TP HCM và Quảng Nam",
+        "text": "Số lượng tinh trùng nhiều",
         "correct": false
       }
     ]
