Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,68 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Những 'đại lộ' kết nối TP.HCM, Bình Dương, Bà Rịa - Vũng Tàu",
+    "content": "Bài viết đề cập đến việc kết nối TP.HCM với các tỉnh Bình Dương và Bà Rịa - Vũng Tàu thông qua nhiều dự án hạ tầng giao thông như cao tốc, metro và đường sắt. Thủ tướng Phạm Minh Chính vừa làm việc với các tỉnh này để thúc đẩy việc sáp nhập và cải thiện cơ sở hạ tầng giao thông giữa các địa phương. Các dự án như cao tốc TP.HCM - Bình Dương và tuyến metro dự kiến sẽ nâng cao khả năng kết nối, giảm thời gian vận chuyển hàng hóa giữa Bình Dương với cảng Bà Rịa - Vũng Tàu.",
+    "link": "https://tuoitre.vn/nhung-dai-lo-ket-noi-tp-hcm-binh-duong-ba-ria-vung-tau-20250322160252786.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Những dự án nào đang được triển khai để kết nối TP.HCM với Bình Dương và Bà Rịa - Vũng Tàu?",
+    "answers": [
+      {
+        "text": "Cao tốc, metro và đường sắt",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có đường bộ",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có metro và đường sắt",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có cao tốc",
+        "correct": false
+      },
+      {
+        "text": "Không có dự án nào",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Làm gì khi ngủ ngáy?",
+    "content": "Ngủ ngáy là một vấn đề phổ biến có thể được cải thiện bằng cách thay đổi tư thế ngủ và duy trì thói quen lành mạnh. Để giảm tình trạng ngáy, người bệnh có thể thử nằm nghiêng, luyện tập thể dục thường xuyên và chú ý đến thói quen trước khi đi ngủ. Những thay đổi này có thể giúp cải thiện chất lượng giấc ngủ và giảm ngáy.",
+    "link": "https://vnexpress.net/lam-gi-khi-ngu-ngay-4864491.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Làm gì để giảm tình trạng ngủ ngáy?",
+    "answers": [
+      {
+        "text": "Đổi tư thế ngủ và duy trì thói quen lành mạnh trước khi ngủ",
+        "correct": true
+      },
+      {
+        "text": "Uống nhiều nước trước khi ngủ",
+        "correct": false
+      },
+      {
+        "text": "Ngủ muộn hơn để ít bị ngáy",
+        "correct": false
+      },
+      {
+        "text": "Sử dụng gối cao hơn khi ngủ",
+        "correct": false
+      },
+      {
+        "text": "Tránh ăn tối trước khi đi ngủ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bắt tạm giam người đàn ông ở Bà Rịa lợi dụng các quyền tự do dân chủ xâm phạm lợi ích của Nhà nước",
     "content": "Công an tỉnh Bà Rịa - Vũng Tàu đã bắt tạm giam ông Trần Đình Toan, 65 tuổi, vì lợi dụng các quyền tự do dân chủ để xâm phạm lợi ích của Nhà nước và quyền lợi của các tổ chức, cá nhân. Ông Toan bị cáo buộc đã đăng tải nhiều thông tin và video trên mạng xã hội với nội dung vu khống và xúc phạm danh dự của các cơ quan chính quyền. Cảnh sát đã thu giữ tại nhà ông Toan nhiều tài liệu và đồ vật liên quan đến hành vi vi phạm pháp luật trước đó, cũng như những thông tin sai sự thật mà ông đã phát tán.",
     "link": "https://tuoitre.vn/bat-tam-giam-nguoi-dan-ong-o-ba-ria-loi-dung-cac-quyen-tu-do-dan-chu-xam-pham-loi-ich-cua-nha-nuoc-2025032215471744.htm",
@@ -1677,33 +1739,6 @@
     ]
   },
   {
-    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
-    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
-    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 5,
-    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
-    "answers": [
-      {
-        "text": "Các số đảo ngược kết quả phép cộng",
-        "correct": true
-      },
-      {
-        "text": "Kết quả là tổng các số bên trái",
-        "correct": false
-      },
-      {
-        "text": "Kết quả là số lớn nhất trong dãy",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần cộng các số lại với nhau",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đặt stent sau bao lâu thì ổn định?",
     "content": "Sau khi đặt stent mạch vành, bệnh nhân thường cần nằm viện từ 2-3 ngày để theo dõi sức khỏe. Thời gian hồi phục có thể khoảng một tuần đối với trường hợp không khẩn cấp, nhưng nếu cần đặt stent ngay lập tức do nhồi máu cơ tim, có thể mất vài tuần đến hơn một tháng để bình phục hoàn toàn. Bệnh nhân cần tuân thủ chế độ dinh dưỡng và tránh hoạt động nặng để hồi phục nhanh chóng.",
     "link": "https://vnexpress.net/dat-stent-sau-bao-lau-thi-on-dinh-4864401.html",
@@ -1730,6 +1765,33 @@
       },
       {
         "text": "3 tháng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cộng đồng mạng phát sốt với bài toán chỉ toàn phép cộng mà gây \"xoắn não\"",
+    "content": "Bài toán đang gây sốt trên mạng xã hội yêu cầu người chơi phải nhận diện quy luật từ một chuỗi số có vẻ như là phép cộng nhưng thực tế lại ẩn chứa nhiều bất ngờ. Đề bài đưa ra bốn phép cộng, trong đó ba kết quả đã cho là sai theo quy tắc toán học truyền thống. Để giải được bài toán, người tham gia cần phát hiện quy luật rằng các kết quả là số đảo ngược của tổng hai số ở phía bên trái dấu '='. Kết quả cuối cùng của phép cộng thứ tư là 13.",
+    "link": "https://dantri.com.vn/giao-duc/cong-dong-mang-phat-sot-voi-bai-toan-chi-toan-phep-cong-ma-gay-xoan-nao-20250320113006716.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 5,
+    "question": "Bài toán gây sốt trên mạng xã hội yêu cầu người chơi tìm quy luật gì?",
+    "answers": [
+      {
+        "text": "Các số đảo ngược kết quả phép cộng",
+        "correct": true
+      },
+      {
+        "text": "Kết quả là tổng các số bên trái",
+        "correct": false
+      },
+      {
+        "text": "Kết quả là số lớn nhất trong dãy",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần cộng các số lại với nhau",
         "correct": false
       }
     ]
@@ -2187,33 +2249,6 @@
     ]
   },
   {
-    "title": "Viêm xoang có di truyền không?",
-    "content": "Viêm xoang không phải là bệnh di truyền, nhưng một số yếu tố di truyền có thể làm tăng nguy cơ mắc bệnh. Các biến thể trong gene như TAS2R38 và ALOX15 có thể ảnh hưởng đến khả năng bảo vệ của xoang mũi và dẫn đến viêm xoang. Mặc dù không di truyền, nhưng môi trường sống và thói quen sinh hoạt của gia đình cũng có thể tạo điều kiện cho bệnh phát triển. Bệnh viêm xoang có thể được điều trị bằng nhiều phương pháp khác nhau, bao gồm thuốc và can thiệp y tế nếu cần.",
-    "link": "https://vnexpress.net/viem-xoang-co-di-truyen-khong-4864247.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Viêm xoang có di truyền không?",
-    "answers": [
-      {
-        "text": "Không, viêm xoang không di truyền nhưng có thể có yếu tố di truyền liên quan.",
-        "correct": true
-      },
-      {
-        "text": "Có, viêm xoang là bệnh di truyền từ cha mẹ sang con.",
-        "correct": false
-      },
-      {
-        "text": "Có thể di truyền trong một số trường hợp hiếm.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở những người sống trong cùng một môi trường.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu hiệu liệt dây thần kinh số 7",
     "content": "Liệt dây thần kinh số 7, hay còn gọi là liệt mặt, có thể biểu hiện qua các triệu chứng như tê nhẹ hoặc cứng một bên mặt, khó khăn khi cười, và miệng kéo lệch khi nói hoặc ăn. Dây thần kinh số 7 điều khiển các cử động cơ mặt và liên quan đến cảm giác vị giác, tiết nước bọt và nước mắt. Nếu phát hiện sớm, điều trị trong vòng 72 giờ có thể giúp phục hồi chức năng hoàn toàn và giảm nguy cơ biến chứng. Các nguyên nhân gây liệt bao gồm nhiễm lạnh, nhiễm virus, và các bệnh lý viêm nhiễm.",
     "link": "https://vnexpress.net/dau-hieu-liet-day-than-kinh-so-7-4864394.html",
@@ -2240,6 +2275,33 @@
       },
       {
         "text": "Đau bụng dưới",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Viêm xoang có di truyền không?",
+    "content": "Viêm xoang không phải là bệnh di truyền, nhưng một số yếu tố di truyền có thể làm tăng nguy cơ mắc bệnh. Các biến thể trong gene như TAS2R38 và ALOX15 có thể ảnh hưởng đến khả năng bảo vệ của xoang mũi và dẫn đến viêm xoang. Mặc dù không di truyền, nhưng môi trường sống và thói quen sinh hoạt của gia đình cũng có thể tạo điều kiện cho bệnh phát triển. Bệnh viêm xoang có thể được điều trị bằng nhiều phương pháp khác nhau, bao gồm thuốc và can thiệp y tế nếu cần.",
+    "link": "https://vnexpress.net/viem-xoang-co-di-truyen-khong-4864247.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Viêm xoang có di truyền không?",
+    "answers": [
+      {
+        "text": "Không, viêm xoang không di truyền nhưng có thể có yếu tố di truyền liên quan.",
+        "correct": true
+      },
+      {
+        "text": "Có, viêm xoang là bệnh di truyền từ cha mẹ sang con.",
+        "correct": false
+      },
+      {
+        "text": "Có thể di truyền trong một số trường hợp hiếm.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở những người sống trong cùng một môi trường.",
         "correct": false
       }
     ]
@@ -4359,33 +4421,6 @@
     ]
   },
   {
-    "title": "8 bước lên dây cót tinh thần trước ngày chạy giải",
-    "content": "Bài viết hướng dẫn runner 8 bước chuẩn bị tinh thần trước ngày chạy giải, bao gồm việc đặt mục tiêu rõ ràng, công nhận tiến bộ, xác định ý nghĩa thành công và duy trì tư duy tích cực. Thời điểm 2-3 tuần trước ngày đua rất quan trọng, cần chú ý đến cả thể chất và tâm lý. Những mẹo hữu ích giúp runner tăng cường động lực và cải thiện hiệu suất trong cuộc đua sắp tới.",
-    "link": "https://vnexpress.net/8-buoc-len-day-cot-tinh-than-truoc-ngay-chay-giai-4864017.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có những bước nào giúp runner chuẩn bị tinh thần trước ngày chạy giải?",
-    "answers": [
-      {
-        "text": "Đặt mục tiêu rõ ràng và duy trì tư duy tích cực",
-        "correct": true
-      },
-      {
-        "text": "Chỉ tập trung vào tốc độ chạy",
-        "correct": false
-      },
-      {
-        "text": "Tránh gặp gỡ bạn bè",
-        "correct": false
-      },
-      {
-        "text": "Không cần lên kế hoạch tập luyện",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Phụ nữ tiền mãn kinh ăn gì cân bằng nội tiết?",
     "content": "Phụ nữ trong giai đoạn tiền mãn kinh thường gặp nhiều triệu chứng khó chịu như mất ngủ, mệt mỏi và bốc hỏa. Để cân bằng nội tiết tố, chế độ dinh dưỡng đóng vai trò quan trọng. Các thực phẩm giàu phytoestrogen như hạt lanh và đậu nành, canxi và vitamin D từ rau lá xanh và sữa, chất xơ từ ngũ cốc và trái cây, cũng như chất béo lành mạnh từ cá béo và hạt chia có thể hỗ trợ giảm triệu chứng. Ngoài ra, bổ sung các tinh chất thiên nhiên cũng giúp cải thiện tình trạng sức khỏe của phụ nữ trong giai đoạn này.",
     "link": "https://vnexpress.net/phu-nu-tien-man-kinh-an-gi-can-bang-noi-tiet-4864193.html",
@@ -4413,6 +4448,33 @@
     ]
   },
   {
+    "title": "8 bước lên dây cót tinh thần trước ngày chạy giải",
+    "content": "Bài viết hướng dẫn runner 8 bước chuẩn bị tinh thần trước ngày chạy giải, bao gồm việc đặt mục tiêu rõ ràng, công nhận tiến bộ, xác định ý nghĩa thành công và duy trì tư duy tích cực. Thời điểm 2-3 tuần trước ngày đua rất quan trọng, cần chú ý đến cả thể chất và tâm lý. Những mẹo hữu ích giúp runner tăng cường động lực và cải thiện hiệu suất trong cuộc đua sắp tới.",
+    "link": "https://vnexpress.net/8-buoc-len-day-cot-tinh-than-truoc-ngay-chay-giai-4864017.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có những bước nào giúp runner chuẩn bị tinh thần trước ngày chạy giải?",
+    "answers": [
+      {
+        "text": "Đặt mục tiêu rõ ràng và duy trì tư duy tích cực",
+        "correct": true
+      },
+      {
+        "text": "Chỉ tập trung vào tốc độ chạy",
+        "correct": false
+      },
+      {
+        "text": "Tránh gặp gỡ bạn bè",
+        "correct": false
+      },
+      {
+        "text": "Không cần lên kế hoạch tập luyện",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thứ trưởng Bộ GD&ĐT: Đừng xem dạy thêm học thêm là việc đương nhiên",
     "content": "Thứ trưởng Bộ GD&ĐT Phạm Ngọc Thưởng đã nhấn mạnh vấn đề dạy thêm, học thêm không nên được xem là điều hiển nhiên trong giáo dục. Ông chỉ ra rằng việc dạy thêm học thêm tràn lan đang gây áp lực cho học sinh và ảnh hưởng đến sự phát triển toàn diện của các em. Thứ trưởng kêu gọi giáo viên và cán bộ quản lý cần thay đổi cách nhìn nhận về dạy thêm học thêm, đồng thời nhấn mạnh sự cần thiết phải quản lý chặt chẽ hoạt động này thông qua các văn bản quy định mới.",
     "link": "https://dantri.com.vn/giao-duc/thu-truong-bo-gddt-dung-xem-day-them-hoc-them-la-viec-duong-nhien-20250321162415863.htm",
@@ -4435,33 +4497,6 @@
       },
       {
         "text": "Vì giáo viên không có thời gian dạy chính khóa.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vụ căn nhà ở quận 7 bị ép đấu giá rẻ mạt: Xóa tên luật sư Tấn Khoa vì lừa dối khách hàng",
-    "content": "Đoàn luật sư TP.HCM đã kỷ luật và xóa tên luật sư Bùi Việt Tấn Khoa do lừa dối khách hàng trong vụ căn nhà ở quận 7. Ông Khoa đã nhận tổng cộng 5 tỉ đồng từ bà L.T.K.C. để yêu cầu thanh tra vụ đấu giá căn nhà nhưng không ký hợp đồng dịch vụ pháp lý và có nhiều hành vi mờ ám. Căn nhà này đã bị bán đấu giá với giá rẻ, dẫn đến cáo buộc về sự thông đồng trong quá trình đấu giá.",
-    "link": "https://tuoitre.vn/vu-can-nha-o-quan-7-bi-ep-dau-gia-re-mat-xoa-ten-luat-su-tan-khoa-vi-lua-doi-khach-hang-20250321134455346.htm",
-    "cat": "phap-luat",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao luật sư Tấn Khoa bị xóa tên khỏi Đoàn luật sư TP.HCM?",
-    "answers": [
-      {
-        "text": "Vì lừa dối khách hàng trong vụ căn nhà ở quận 7.",
-        "correct": true
-      },
-      {
-        "text": "Vì không thực hiện đúng quy trình đấu giá.",
-        "correct": false
-      },
-      {
-        "text": "Vì không đủ trình độ hành nghề luật sư.",
-        "correct": false
-      },
-      {
-        "text": "Vì vi phạm quy định về bảo mật thông tin.",
         "correct": false
       }
     ]
